--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -14,3 +14,13 @@ jobs:
           build: npm run build
           start: npm start
           browser: chrome
+      - uses: actions/upload-artifact@v4
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+          if-no-files-found: ignore
+      - uses: actions/upload-artifact@v4
+        with:
+          name: cypress-videos
+          path: cypress/videos
+          if-no-files-found: ignore
